--- a/src/components/AddIssue/AddIssue.css
+++ b/src/components/AddIssue/AddIssue.css
@@ -28,6 +28,10 @@ form button {
     box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
     padding: 15px 30px;
     font-size: 16px;
-    margin-top: 15px;
+    margin-top: 25px;
 }
 
+.add {
+    background-color: rgb(34, 122, 46);
+    color: whitesmoke
+}
