--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ h1 {
 
 .grey-card-container {
     max-width: 725px;
+    min-height: 600px;
     margin: auto;
     background: #F6F6F6;
     -webkit-box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
