Adding React Router DOM + Re-enable old CSS
This works towards the issue https://github.com/CSAllenISD/2023-ISP-Bug-Tracker/issues/24
This is the initial addition of React router dom that I managed to get working
there will be more fixes coming later but I wanted to get changing the pages working
to an extent.

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* .App {
+.App {
     text-align: center;
 }
 
@@ -50,7 +50,7 @@ h1 {
     max-width: 500px;
     margin: auto;
     margin-top: 30px;
-} */
+}
 
 * {
   margin: 0;
@@ -74,7 +74,7 @@ body {
 }
 
 body {
-  background-color: #f6f6f6;
+  background-color: #e2e8f0;
 }
 
 nav {
