--- a/src/App.css
+++ b/src/App.css
@@ -79,25 +79,71 @@ background-color: #e2e8f0;
 }
 
 nav {
-display: flex;
-align-items: center;
-justify-content: space-between;
-min-height: 90px;
+  display: flex;
+  min-height: 70px;
+  justify-content: center;
+  align-content: space-around;
+  flex-wrap: wrap;
 }
-.navbar-menu-container {
-display: none;
+
+.navbar-links-container li {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
 }
+
 .navbar-links-container a {
-margin-right: 5rem;
-text-decoration: none;
-color: black;
-font-size: 1.1rem;
-font-weight: 600;
+  color: #4c4c4c;
+  text-decoration: none;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  font-weight: 500;
+  display: inline-block;
+  width: 150px;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
-.navbar-menu-container svg {
-font-size: 1.5rem;
-cursor: pointer;
+
+.navbar-links-container a:hover {
+  color: #1d80ca;
 }
+
+.navbar-links-container .dot {
+  width: 6px;
+  height: 6px;
+  background: #1d80ca;
+  border-radius: 50%;
+  opacity: 0;
+  -webkit-transform: translateX(30px);
+  transform: translateX(30px);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.navbar-links-container a:nth-child(1):hover ~ .dot {
+  -webkit-transform: translateX(30px);
+  transform: translateX(30px);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  opacity: 1;
+}
+
+.navbar-links-container a:nth-child(2):hover ~ .dot {
+  -webkit-transform: translateX(110px);
+  transform: translateX(110px);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  opacity: 1;
+}
+
+.navbar-links-container a:nth-child(3):hover ~ .dot {
+  -webkit-transform: translateX(200px);
+  transform: translateX(200px);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  opacity: 1;
+}
+
 .home-banner-container {
 position: relative;
 display: flex;
@@ -217,8 +263,10 @@ font-weight: 600;
 
 @media (max-width: 1000px) {
 .navbar-links-container a {
-  margin-right: 1rem;
-  font-size: 1rem;
+  display: inline-block;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  margin-right: 10px;
 }
 .primary-button {
   font-size: 1rem;
@@ -232,7 +280,14 @@ font-weight: 600;
   max-width: 140px;
 }
 .navbar-links-container {
-  display: none;
+  color: #999999;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .navbar-menu-container {
   display: flex;
