Fixing Nav Bar padding and widths This works towards issue https://github.com/CSAllenISD/2023-ISP-Bug-Tracker/issues/21

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
 .App {
   text-align: center;
 }
-
 .Calendar {
 	text-align: center;
 }
-
 body {
   background: #eef4fb
 }
@@ -57,170 +55,220 @@ h1 {
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Reem Kufi", sans-serif !important;
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: "Reem Kufi", sans-serif !important;
 }
 img {
-  margin-left: 5%;
-  max-width: 100%;
-  height: auto;
+margin-left: 5%;
+max-width: 100%;
+height: auto;
 }
 .App {
-  min-height: 100vh;
-  width: 85vw;
-  max-width: 1900px;
-  margin: 0rem auto;
+min-height: 100vh;
+width: 85vw;
+max-width: 1900px;
+margin: 0rem auto;
 }
 body {
-  max-width: 100%;
-  overflow-x: hidden;
+max-width: 100%;
+overflow-x: hidden;
 }
 
 body {
-  background-color: #e2e8f0;
+background-color: #e2e8f0;
 }
 
 nav {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  min-height: 90px;
+  min-height: 70px;
+  justify-content: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+}
+
+.navbar-links-container li {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
 }
 
 .navbar-links-container a {
-  margin-right: 5rem;
+  color: #4c4c4c;
   text-decoration: none;
-  color: black;
-  font-size: 1.1rem;
-  font-weight: 600;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  font-weight: 500;
+  display: inline-block;
+  text-align: center;
+  padding: 0px 20px;
+  transition: all 0.2s ease-in-out;
 }
-.navbar-menu-container svg {
-  font-size: 1.5rem;
-  cursor: pointer;
+
+.navbar-links-container a:hover {
+  color: #1d80ca;
 }
+
+.navbar-links-container .dot {
+  width: 6px;
+  height: 6px;
+  background: #1d80ca;
+  border-radius: 50%;
+  opacity: 0;
+  -webkit-transform: translateX(30px);
+  transform: translateX(30px);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.navbar-links-container a:nth-child(1):hover ~ .dot {
+  -webkit-transform: translateX(30px);
+  transform: translateX(30px);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  opacity: 1;
+}
+
+.navbar-links-container a:nth-child(2):hover ~ .dot {
+  -webkit-transform: translateX(110px);
+  transform: translateX(110px);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  opacity: 1;
+}
+
+.navbar-links-container a:nth-child(3):hover ~ .dot {
+  -webkit-transform: translateX(200px);
+  transform: translateX(200px);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  opacity: 1;
+}
+
 .home-banner-container {
-  position: relative;
-  display: flex;
-  padding-top: 3rem;
+position: relative;
+display: flex;
+padding-top: 3rem;
 }
 .home-bannerImage-container {
-  position: absolute;
-  top: -100px;
-  right: -170px;
-  z-index: -2;
-  max-width: 700px;
+position: absolute;
+top: -100px;
+right: -170px;
+z-index: -2;
+max-width: 700px;
 }
 .home-image-section {
-  margin-right: 5%;
-  max-width: 600px;
-  flex: 1;
+margin-right: 5%;
+max-width: 600px;
+flex: 1;
 }
 .home-text-section {
-  margin-left: 50px;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+margin-left: 50px;
+flex: 1;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
 }
 .primary-heading {
-  font-size: clamp(2rem, 5vw, 4rem);
-  color: #4c4c4c;
-  /* line-height: 5rem; */
-  max-width: 600px;
+font-size: clamp(2rem, 5vw, 4rem);
+color: #4c4c4c;
+/* line-height: 5rem; */
+max-width: 600px;
 }
 .primary-text {
-  font-size: clamp(1rem, 3vw, 1.5rem);
-  max-width: 500px;
-  color: #6a6a6a;
-  margin: 1.5rem 0rem;
+font-size: clamp(1rem, 3vw, 1.5rem);
+max-width: 500px;
+color: #6a6a6a;
+margin: 1.5rem 0rem;
 }
 
 .about-section-container {
-  margin-top: 20rem;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+margin-top: 20rem;
+position: relative;
+display: flex;
+align-items: center;
+justify-content: space-between;
 }
 .about-background-image-container {
-  position: absolute;
-  left: -150px;
-  z-index: -2;
+position: absolute;
+left: -150px;
+z-index: -2;
 }
 .about-section-image-container {
-  flex: 0.9;
-  margin-right: 1rem;
+flex: 0.9;
+margin-right: 1rem;
 }
 .about-section-text-container {
-  margin-left: 5%;
-  flex: 1;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
+margin-left: 5%;
+flex: 1;
+justify-content: center;
+display: flex;
+flex-direction: column;
 }
 .primary-subheading {
-  font-weight: 700;
-  color: hwb(219 5% 0%);
-  font-size: 1.15rem;
+font-weight: 700;
+color: hwb(219 5% 0%);
+font-size: 1.15rem;
 }
 .about-buttons-container {
-  margin-top: 2rem;
-  display: flex;
+margin-top: 2rem;
+display: flex;
 }
 .work-section-wrapper {
-  margin-top: 15rem;
+margin-top: 15rem;
 }
 .work-section-top p {
-  text-align: center;
-  max-width: 600px !important;
+text-align: center;
+max-width: 600px !important;
 }
 .work-section-top h1 {
-  max-width: 700px !important;
+max-width: 700px !important;
 }
 .work-section-top {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
 }
 .work-section-info {
-  width: 290px;
-  min-height: 350px;
-  background-color: white;
-  padding: 1rem 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  border-radius: 1rem;
-  color: #505050;
+width: 290px;
+min-height: 350px;
+background-color: white;
+padding: 1rem 2rem;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+text-align: center;
+border-radius: 1rem;
+color: #505050;
 margin: 1rem 2rem;
 }
 .work-section-info h2 {
-  margin: 1rem 0rem;
+margin: 1rem 0rem;
 }
 .work-section-bottom {
-  margin-top: 5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+margin-top: 5rem;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-wrap: wrap;
 }
 .work-section-info p {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  font-weight: 600;
+flex: 1;
+display: flex;
+align-items: center;
+font-weight: 600;
 }
 
 @media (max-width: 1000px) {
 .navbar-links-container a {
-  margin-right: 1rem;
-  font-size: 1rem;
+  display: inline-block;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  margin-right: 10px;
 }
 .primary-button {
   font-size: 1rem;
@@ -230,9 +278,18 @@ margin: 1rem 2rem;
 }
 }
 @media (max-width: 800px) {
-
+.nav-logo-container {
+  max-width: 140px;
+}
 .navbar-links-container {
-  display: none;
+  color: #999999;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .navbar-menu-container {
   display: flex;
