--- a/client/src/components/CurrentIssue/CurrentIssue.css
+++ b/client/src/components/CurrentIssue/CurrentIssue.css
@@ -29,6 +29,26 @@
     right: 0;
     color: #959595;
     margin-top: 0;
+    border: none;
+    font-size: 14px;
+    background: #007AE6;
+    width: 90px;
+    padding: 5px;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, transform;
+    transition-property: box-shadow, transform;
+}
+
+.close-issue:hover, .close-issue:focus, .close-issue:active {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 .current-issues hr {
